avencee GWT\nAjout de la ligne decrivant une classe.

--- a/simplex-webapp/.settings/org.eclipse.wst.common.component
+++ b/simplex-webapp/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/apt"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
         <dependent-module archiveName="simplex-storage-api-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/simplex-storage-api/simplex-storage-api">
             <dependency-type>uses</dependency-type>
         </dependent-module>
